--- a/src/App.css
+++ b/src/App.css
@@ -7,24 +7,37 @@ body{
     padding:0;
     background-color: rgb(12, 11, 11);
     color:white;
+    font-family: "Metal Mania", cursive;
 }
 
 .App{
     height:100vh;
     display:flex;
-    justify-content: center;
+    flex-direction:column;
     align-items:center;
     font-size:3rem;
 }
 
+/* Navbar */
+
+.navbar{
+    font-size:1.8rem;
+    cursor:pointer;
+}
+
+.navbar-toggler{
+    background-color: rgb(235, 229, 229,0.1);
+}
+
+/* Cover */
 .cover{
     text-align:center;
-    font-family: "Metal Mania", cursive;
     display:flex;
     justify-content: center;
     align-items: center;
     flex-direction:column;
     cursor:pointer;
+    margin-top:0;
 }
 
 .cover img{
@@ -49,11 +62,27 @@ a{
     color:red;
 }
 
-a:last-child{
+.cover a:last-child{
     color:orange;
 }
 
+/* Media queries */
+
+@media(max-width:770px){
+    nav li{
+        width:90%;
+        font-size:1.5rem;
+    }
+}
+
+@media(max-width:400px){
+    .navbar-toggler{
+        font-size:1rem;
+    }
+}
+
 @media(max-width:415px){
+
     .App{
         font-size:1.8rem;
     }
