--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,6 @@ a{
 
 @media(max-width:770px){
     nav li{
-        width:90%;
         font-size:1.5rem;
     }
 }
@@ -94,7 +93,7 @@ a{
         font-size:1.2rem;
     }
     img{
-        height: 30rem;
-        width: 30rem;
+        width:100%;
+        height:auto;
     }
 }
