--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,17 @@ body{
     cursor:pointer;
 }
 
+.nav-link{
+    background-color:rgba(7, 218, 95, 0.5);
+    width:15%;
+    text-align:center;
+    font-family: 'Arial', sans-serif;
+}
+
+
 .navbar-toggler{
-    background-color: rgb(235, 229, 229,0.1);
+    background-color: rgba(7, 218, 95, 0.2);
+    border-radius:1px solid yellow;
 }
 
 /* Cover */
@@ -76,11 +85,6 @@ a{
     }
 }
 
-@media(max-width:400px){
-    .navbar-toggler{
-        font-size:1rem;
-    }
-}
 
 @media(max-width:415px){
 
