--- a/src/App.css
+++ b/src/App.css
@@ -26,10 +26,10 @@ body{
 }
 
 .nav-link{
-    background-color:rgba(7, 218, 95, 0.5);
+    /* background-color:rgba(7, 218, 95, 0.5);
     width:15%;
     text-align:center;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Arial', sans-serif; */
 }
 
 
@@ -79,9 +79,16 @@ a{
 
 /* Media queries */
 
-@media(max-width:770px){
+@media(max-width:767px){
     nav li{
         font-size:1.5rem;
+    }
+
+    .nav-link{
+        background-color:rgba(7, 218, 95, 0.5);
+        width:15%;
+        text-align:center;
+        font-family: 'Arial', sans-serif;
     }
 }
 
