--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,9 @@ body{
 .navbar-toggler{
     background-color: rgba(7, 218, 95, 0.2);
     border-radius:1px solid yellow;
+    margin: 0 auto;
 }
+
 
 /* Cover */
 .cover{
@@ -78,17 +80,21 @@ a{
 
     .nav-link{
         background-color:rgba(7, 218, 95, 0.8);
-        width:15%;
+        width:20%;
         text-align:center;
         font-family: 'Arial', sans-serif;
+        margin:0 auto;
     }
 }
 
 
 @media(max-width:415px){
-
     .App{
         font-size:1.8rem;
+    }
+
+    .cover{
+        margin-top:20%;
     }
 
     .fab{
