--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ body{
 
 .fab, .far,.fas{
     font-size:2.5rem;
+    cursor:pointer;
 }
 
 a{
@@ -95,16 +96,28 @@ a{
     text-align:center;
 }
 
+.fa-minus-square, .fa-plus-square:hover{
+    color:rgb(87, 223, 171);
+}
+
+.fa-minus-square:active{
+    margin-left:1rem;
+}
+
+.fa-plus-square:active{
+    margin-left:1rem;
+}
+
 /* Media queries */
 
 @media(max-width:767px){
     nav li{
-        font-size:1.5rem;
+        font-size:1.8rem;
     }
 
     .nav-link{
         background-color:rgba(7, 218, 95, 0.8);
-        width:20%;
+        width:30%;
         text-align:center;
         font-family: 'Arial', sans-serif;
         /* margin:0 auto; */
@@ -114,7 +127,7 @@ a{
 
 @media(max-width:415px){
     .App{
-        font-size:1.8rem;
+        font-size:3.1rem;
     }
 
     .cover{
@@ -122,7 +135,7 @@ a{
     }
 
     .fab,.far,.fas{
-        font-size: 1.7rem;
+        font-size: 3rem;
     }
     .new{
         font-size:1.2rem;
@@ -135,4 +148,15 @@ a{
     .navbar-toggler{
         font-size:2rem;
     }
+}
+
+@media(max-width:320px){
+    .App{
+        font-size:2.8rem;
+    }
+
+    .fab,.far,.fas{
+        font-size: 2.7rem;
+    }
+
 }
