--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,24 @@ body{
     display:flex;
     flex-direction:column;
     align-items:center;
+}
+
+.band{
+    font-size:4rem;
+}
+
+.album{
     font-size:3rem;
+}
+
+.buttons{
+    display:none;
 }
 
 /* Navbar */
 
 .navbar{
-    font-size:1.8rem;
+    font-size:3rem;
     cursor:pointer;
 }
 
@@ -145,7 +156,7 @@ a{
     }
 
     .fab,.far,.fas{
-        font-size: 3rem;
+        font-size: 4.2rem;
     }
     .new{
         font-size:1.2rem;
@@ -157,6 +168,10 @@ a{
 
     .navbar-toggler{
         font-size:2rem;
+    }
+
+    .buttons{
+        display:block;
     }
 }
 
